# python-playground

./: .gitignore  .pre-commit-config.yaml
django-api/: .flake8  .pre-commit-config.yaml  Dockerfile  NOTES.md  README.md  docker-compose.yml  docker_entrypoint.sh  httpie-space-django-store-api.json  pyproject.toml  pytest.ini
django-api/django_api/: settings.py  urls.py
django-api/django_api/django_api/: settings.py  urls.py
django-api/django_api/snippets/: urls.py  views.py
django-api/store_api/: admin.py  apps.py  models.py  requests.py  serializers.py  urls.py  views.py
django-api/store_api/migrations/: 0001_initial.py  0002_alter_user_deleted_alter_user_updated.py  0003_product_productstock.py  0003_userapitoken.py  0004_product_owner_user_alter_productstock_product.py  0005_alter_product_owner_user.py  0006_alter_product_state.py  0007_tag_product_tags.py  0008_remove_productstock_store_api_productstock_reserved_gte_zero_and_more.py  0009_order_product_order.py  0010_remove_product_order_orderlineitem_order_products_and_more.py  0011_order_store_api_order_created.py  0012_alter_order_created_alter_order_state_and_more.py  0013_order_change_pk.py
django-api/store_async_jobs/: consumer.py  jobs.py  order_events_consumer.py
django-api/tests/: conftest.py
django-api/tests/api/: test_token.py  test_users.py
django-api/tests/integration/: base_test.py
django-api/tests/unit/: test_product.py
django-server/: NOTES.md  README.md  docker-compose.yml  pyproject.toml
django-server/django_server/: settings.py
django-server/django_server/django_server/: settings.py  urls.py
django-server/django_server/polls/: models.py  serializers.py  urls.py  urls_api.py  views.py
django-server/django_server/tests/: test_api.py
django-server/polls/: models.py  urls.py  urls_api.py  views.py
django-server/polls/migrations/: 0001_initial.py
django-server/tests/: conftest.py  test_api.py
flask-server/: README.md  alembic.ini  docker-compose.yml  pyproject.toml
flask-server/alembic/: README.md  env.py
flask-server/alembic/versions/: 1_7251cfe33590_token_table.py  2024_08_19_163441-607eb59da34c_add_created_timestamp_to_a_token.py  2_f73fa180bde8_token_expiry_with_timezone.py  4dcf0e4ac473_post_created_with_timezone.py  a83a54bbc616_initial_schema.py
flask-server/flask_server/: __init__.py  auth.py  blog.py  config.py  db.py  json_encoding.py
flask-server/flask_server/api/: auth.py  errors.py  (+3 more)
flask-server/tests/: conftest.py  test_auth.py  test_blog.py  test_db.py
(+79 files in other folders)
