[tool.poetry]
name = "django-api"
version = "0.1.0"
description = ""
authors = ["hvieira"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
django = "~5.1"
djangorestframework = "~3.15.2"
psycopg2 = "~2.9.9"
pygments = "~2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
