[tool.poetry]
name = "django-api"
version = "0.1.0"
description = ""
authors = ["hvieira"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10.13"
Django = "5.2a1"
psycopg2 = "~2.9.9"
djangorestframework = "~3.15.2"
django-oauth-toolkit = "~3.0.1"
django-fsm-2 = "~4.0.0"
redis = "~5.2.1"
apscheduler = "~3.11.0"

[tool.poetry.group.dev.dependencies]
black = "~24.8.0"
pytest = "~8.3.2"
pytest-django = "~4.9.0"
coverage = "~7.6.1"
requests = "~2.32.3"
freezegun = "~1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 310


